--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <!--Estilo-->
   <link rel="stylesheet" type="text/css" href="css/main.css">
   <!-- Media -->
+
 </head>
 <body>
   <!--Navbar-->
@@ -20,7 +21,7 @@
     <span class="navbar-toggler-icon"></span>
     </button>
 
-  <div class="collapse navbar-collapse" id="navbarNav">
+  <div class="collapse navbar-collapse  " id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item">
         <a class="nav-link" href="#">Viaja </a>
@@ -55,35 +56,38 @@
           </h3>
           
           <div class="row logbox">          
-            <div class="col-md-6">
+            <div class="col-lg-6">
               <h4>Viaja con</h4>
             </div>
-            <div class="col-md-6">
+            <div class="col-lg-6">
               <img src="assets/images/logoBlanco.png">
             </div>          
           </div>
   <!-- B o t ó n --> 
           <div class="row">
-            <div class="col-md-2">
+            <div class="col-lg-2 hidden-md hidden-sm hidden-xs">
               <button id="btn-reg"><b>REGÍSTRATE</b></button>
+              <button class="hidden-lg" ><b>Descarga el app</b></button>
             </div>
           </div>
+
+
   <!-- D i v i s i ó n -->
           <div class="row sub-logbox">
-            <div class="col-4">
+            <div class="col-lg-4 hidden-md hidden-sm hidden-xs">
               <p>________________</p>
             </div>
-            <div class="col-md-4">
+            <div class="col-lg-4 hidden-md hidden-sm hidden-xs">
               <p>ó bien</p>
             </div>
-            <div class="colmd--4">
+            <div class="col-lg-4 hidden-md hidden-sm hidden-xs">
               <p>________________</p>
             </div>
           </div>
   <!-- B o t ó n -->
           <div class="row">
-            <div class="col-md-12">
-              <button id="btn-con"><b>Conviértete en un conductor</b></button>
+            <div class="col-lg-12 hidden-md hidden-sm hidden-xs">
+              <button id="btn-con" ><b>Conviértete en un conductor</b></button>
             </div>       
           </div>
         </div>  
